Update confirm.html back to home page link

--- a/confirm.html
+++ b/confirm.html
@@ -157,8 +157,9 @@
         <p>Your order is being processed and will be delivered shortly. Thank you for choosing Sip & Splurge!</p>
 
         <!-- Button to go back to homepage -->
-        <button class="btn"><a href="home.html">Back to Homepage</a></button>
+        <button class="btn"><a href="index.html">Back to Homepage</a></button>
     </div>
 
 </body>
 </html>
+
